# ananas-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .secrets.env.example  CLAUDE.md  Makefile  README.md  ananas_ai_dev.db  mempalace.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: category-growth-agent.md  competitor-intelligence-agent.md  crm-lifecycle-agent.md  cross-channel-brief-agent.md  customer-segmentation-agent.md  demand-forecasting-agent.md  employer-branding-agent.md  influencer-partnership-agent.md  knowledge-retrieval-agent.md  marketing-ops-agent.md  meeting-intelligence-agent.md  organic-merchandising-agent.md  performance-agent.md  product-feed-agent.md  promo-simulator-agent.md  reputation-agent.md  supplier-intelligence-agent.md  traditional-media-correlation-agent.md  translation-agent.md
.claude/commands/: architecture-review.md  daily-brief.md
.claude/rules/: architecture.md  documentation.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
archive/: README.md
config/: agents.json  integrations-matrix.json  metrics.json  model-routing.json  output-channels.json  output-schema-summary.json  project-overview.json  schedules.json
context/ananas/: SOURCES.md  ananas-overview.md
diagrams/export/: README.md
diagrams/source/: architecture-v1.dot  architecture-v1.mmd  architecture.dot  architecture.mmd
docs/: Ananas AI Platform Master Document.docx  Ananas AI Platform — Master Document.docx  ananas-ai-platform-master.py  project-summary.md  references.md
docs/architecture/: CHANGELOG.md  architecture-v1.md  architecture.md  (+3 more)
memory/: feedback_no_em_dashes.md
portal/: package-lock.json  package.json
schemas/: agent_output.schema.json  meeting_summary.schema.json
scripts/: doctor.py  get_graph_token.py  guardrail_check.py  push_secrets.py  refresh_meta_token.py  setup_watcher_service.sh  transcribe_meeting.py  validate_pack.py  validate_repo.py  watch_context.py
sql/: schema.sql
templates/: adr-template.md  weekly-architecture-review-template.md
tests/: conftest.py  test_agents.py  test_cli_integration.py  test_cli_smoke.py  test_config.py  test_email_delivery.py  test_model_client.py  test_persistence.py  test_phase2_agents.py  test_phase2_agents_batch2.py  test_router.py  test_teams.py  test_transcribe_meeting.py  test_validation.py
(+220 files in other folders)
