[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ananas-ai"
version = "0.1.0"
description = "Brand-new starter for the Ananas AI Platform"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "python-dotenv>=1.0.0",
    "google-analytics-data>=0.20.0",
    "watchdog>=6.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pillow>=11.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]
